--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,8 +3,10 @@
 <head>
   <title>Well am the Best</title>
   <meta charset ="UTF-8">
+  <link href="base.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
   <header>
     <ul>
       <li><a href="base_index.html">base index page</a></li>
@@ -42,6 +44,4 @@
   </main>
     
 </body>
-<link href="base.css" rel="stylesheet">
-<link href="styles.css" rel="stylesheet">
 </html>
